# song_painter

./: Cargo.toml
assets/shaders/: playline.frag  playline.vert  timeline.frag  timeline.vert  timeline_tone.frag  timeline_tone.vert
src/: main.rs  paint.rs  resources.rs  timeline.rs
src/engine/: mesh.rs  mod.rs  shader.rs  texture.rs  window.rs
